--- a/.gitignore
+++ b/.gitignore
@@ -29,18 +29,7 @@ coverage
 
 *.tsbuildinfo
 
-
-
 # dir 不需要提交的目录
 /node_modules
-/newtab
+*/newtab
 /.vscode
-​
-# file 不需要提交的文件
-#config.ini
-​
-# log 不需要提交的任意包含后缀名为log的文件
-#*.log
-​
-# Package Files 不需要提交的任意包含后缀名为jar的文件
-#*.jar
