--- a/MyNewTab/manifest.json
+++ b/MyNewTab/manifest.json
@@ -1,8 +1,9 @@
 {
 	"manifest_version": 3,
-	"name": "MyNewTab",
-	"version": "1.0.0",
-	"description": "丰富新标签页功能",
+	"name": "__MSG_extensionName__",
+	"version": "2.0.0",
+	"description": "__MSG_extensionDescription__",
+	"default_locale": "zh",
 	"chrome_url_overrides": {
 		"newtab": "newtab/index.html"
 	},
