--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.7.7",
     "lodash": "^4.17.21",
     "pinia": "^2.2.4",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-i18n": "^10.0.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
