--- a/MyNewTab/manifest.json
+++ b/MyNewTab/manifest.json
@@ -25,7 +25,6 @@
 		"service_worker": "background.js"
 	},
 	"host_permissions": [
-		"https://suggestion.baidu.com/*",
-		"https://api.bing.com/*"
+		"<all_urls>"
 	]
 }
