可以导入导出设置

--- a/MyNewTab/manifest.json
+++ b/MyNewTab/manifest.json
@@ -18,7 +18,9 @@
 		"favicon"
 	],
 	"permissions": [
-		"storage"
+		"storage",
+		"clipboardWrite",
+		"clipboardRead"
 	],
 	"background": {
 		"service_worker": "background.js"
